# rustium

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  compose.yaml
.github/workflows/: documentation.yaml
docs/: Book.toml
docs/src/: README.md
example/: Cargo.toml  Dockerfile  README.md  compose.yaml
example/api-test/: get_user.rest  login.rest
example/config/: development.json
example/src/: main.rs  router.rs
example/src/notifications/: repository.rs
example/src/users/: mod.rs  model.rs  repository.rs  service.rs
example/src/users/dtos/: mod.rs  requests.rs  responses.rs  storage.rs
example/src/users/handlers/: create.rs  get.rs  login.rs  mod.rs
lib/: Cargo.toml  README.md
lib/src/: context.rs  error.rs  lib.rs  prelude.rs  result.rs  service.rs
lib/src/authentication/: auth_request.rs  auth_service.rs  auth_user.rs  authenticate_request.rs  authorization.rs  mod.rs  token.rs
lib/src/datastore/: conversion.rs  idb.rs  idb_dal.rs  ikv_dal.rs  imq_dal.rs  mod.rs  object.rs  query_builder.rs  rabbit_dal.rs  redis_dal.rs  surreal_dal.rs  take_x_impl.rs
lib/src/datastore/repositories/: base.rs
lib/src/logging/: tracing.rs
lib/src/response/: into-axum.rs  into_axum.rs  mod.rs  pagination.rs
lib/src/settings/: api.rs  auth.rs  database.rs  interface.rs  logger.rs  mod.rs  rabbit.rs  redis.rs  server.rs
project-template/: Cargo.toml
project-template/src/: main.rs
template/: Cargo.toml
