[package]
name = "rustium"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Rust application framework that values concurrency, performance, and scalability"
homepage = "https://github.com/Cryptoware-ME/rustium.git"
repository = "https://github.com/Cryptoware-ME/rustium.git"
readme = "README.md"

[dependencies]
