[package]
name = "rustium"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A Rust application framework that values concurrency, performance, and scalability"
homepage = "https://github.com/Cryptoware-ME/rustium.git"
repository = "https://github.com/Cryptoware-ME/rustium.git"
readme = "README.md"

[dependencies]
surrealdb = { version = "2.0.1" }
modql = "0.4.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.31" }
axum = { version = "0.7.5" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.6.0", features = [
	"trace",
	"compression-br",
	"propagate-header",
	"sensitive-headers",
	"cors",
] }
config = "0.14.0"
