[package]
name = "rustium"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "A Rust application framework that values concurrency, performance, and scalability"
homepage = "https://github.com/Cryptoware-ME/rustium.git"
repository = "https://github.com/Cryptoware-ME/rustium.git"
readme = "README.md"

[dependencies]
http = "1.0.0"
surrealdb = { version = "2.0.1" }
modql = "0.4.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.31" }
axum = { version = "0.7.5" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.6.0", features = [
	"trace",
	"compression-br",
	"propagate-header",
	"sensitive-headers",
	"cors",
] }
config = "0.14.0"
bytes = "1.7.2"
mime = "0.3.17"
thiserror = "1.0.63"
argon2 = "0.5.3"
redis = "0.27.2"
amqprs = "2.0.0"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
more-di = "3.1.0"
more-di-axum = "0.2.0"
serde_derive = "1.0.210"
